-------------------------------------------------------------------------------

$Id$

-------------------------------------------------------------------------------

Changes in version 1.4.0-rc2:

* Fixed a deadlock causing race condition concerning thread signaling when the
  master thread had no opportunity to run, but shall be killed immediately
  after creation.
* Added missing up()s causing a semaphore being not released in some rare
  cases.
* Minor fixes.
* Removed some deprecated files.

Changes in version 1.4.0-rc1:

* Realtime interface changes:
    - Replaced ec_slave_t with ec_slave_config_t, separating the bus
      configuration from the actual slaves. Therefore, renamed
      ecrt_master_get_slave() to ecrt_master_slave_config().
    - Replaced slave address string with alias and position values. See
      ecrt_master_slave_config().
    - Removed ecrt_master_get_slave_by_pos(), because it is no longer
      necessary due to alias/position addressing.
    - Added ec_slave_config_state_t for the new method
      ecrt_slave_config_state().
    - Process data memory for a domain can now be allocated externally. This
      offers the possibility to use a shared-memory region. Therefore,
      added the domain methods ecrt_domain_size() and
      ecrt_domain_external_memory().
    - Pdo entry registration functions do not return a process data pointer,
      but an offset in the domain's process data. In addition, an optional bit
      position can be requested. This was necessary for the external domain
      memory. An additional advantage is, that the returned offset is
      immediately valid. If the domain's process data is allocated internally,
      the start address can be retrieved with ecrt_domain_data().
    - Replaced ecrt_slave_pdo_mapping/add/clear() with
      ecrt_slave_config_pdo_assign_add() to add a Pdo to a sync manager's Pdo
      assignment and ecrt_slave_config_pdo_mapping_add() to add a Pdo entry to a